package kr.hhplus.be.server.domain.coupon.enums;

public enum DiscountType {
    PERCENTAGE,
    FIXED_AMOUNT
}
