package kr.hhplus.be.server.domain.coupon.enums;

public enum IssuedCouponStatus {
    UNUSED,
    USED,
    DEACTIVATED
}
