package kr.hhplus.be.server.domain.order.enums;

public enum OrderStatus {
    PENDING,
    COMPLETED,
    FAILED
}
