package kr.hhplus.be.server.domain.order.enums;

public enum PaymentStatus {
    PENDING,
    COMPLETED,
    FAILED
}
