package kr.hhplus.be.server.domain.point;

public enum PointHistoryType {
    CHARGE,
    USE
}
