package kr.hhplus.be.server.domain.product;

public enum SellingStatus {
    SELLING,
    STOPPED
}
